--- a/src/app/fatherAndSon/son/son.component.html
+++ b/src/app/fatherAndSon/son/son.component.html
@@ -1,10 +1,8 @@
 <h1>Tarea</h1>
 
 <div>
-    <ol>
-        <li>crear nuevo proyecto</li>
-        <li>subir proyecto a gifhub</li>
-        <li>crear componente padre y componente hijo</li>
-        <li>hacer que el padre le pase un componente al hijo</li>
-    </ol>
+    <li *ngFor="let tarea of tareas">
+        {{tarea.nombre}} - {{tarea.ejemplo}}
+    </li>
 </div>
+
